# dvdinfo

./: README  meson.build
linux/: Makefile  dvdinfo  dvdinfo-linux.pro  moc_dvdinfoview.cpp  moc_dvdtitleinfoview.cpp
macx/: Info.plist  README.txt  moc_dvdtitleinfoview.cpp  moc_mainwindow.cpp
macx/DVDinfo.xcodeproj/: project.pbxproj  qt_makeqmake.mak  qt_preprocess.mak  starbuck.mode1v3
macx/dvdinfo-packaging.pmdoc/: index.xml
res/: dvdinfo.desktop
src/: dvdinfocore.cpp  dvdinfocore.h  dvdinfoview.cpp  dvdinfoview.h  dvdtitleinfoview.cpp  dvdtitleinfoview.h  main.cpp  mainwindow.cpp  mainwindow.h
trunk/InfoTool/: CHANGELOG  README
trunk/InfoTool/linux/: dvdinfo  moc_dvdinfoview.cpp  moc_dvdtitleinfoview.cpp  moc_mainwindow.cpp
trunk/InfoTool/macx/: dvdinfo-macx.pro  moc_dvdinfoview.cpp  moc_mainwindow.cpp
trunk/InfoTool/macx/DVDinfo.xcodeproj/: project.pbxproj  qt_preprocess.mak  starbuck.pbxuser
trunk/InfoTool/macx/dvdinfo-packaging.pmdoc/: 01dvdinfo-contents.xml  01dvdinfo.xml
trunk/InfoTool/src/: dvdinfocore.cpp  dvdinfocore.h  dvdinfoview.cpp  dvdinfoview.h  dvdtitleinfoview.cpp  dvdtitleinfoview.h  main.cpp  mainwindow.cpp
trunk/InfoTool/win32/: .cproject  .project  Makefile  Makefile.Debug  Makefile.Release  dvdinfo-win32.pro
trunk/InfoTool/win32/debug/: moc_dvdinfoview.cpp  moc_dvdtitleinfoview.cpp  (+1 more)
win32/: .cproject  .project  Makefile.Debug  dvdinfo-win32.pro
win32/debug/: moc_dvdinfoview.cpp  moc_dvdtitleinfoview.cpp  moc_mainwindow.cpp
win32/release/: moc_dvdinfoview.cpp  moc_dvdtitleinfoview.cpp  moc_mainwindow.cpp
(+3 files in other folders)
